crates/ruff_linter/src/rules/pydocstyle/snapshots/ruff_linter__rules__pydocstyle__tests__D300_D300.py.snap
---
source: crates/ruff_linter/src/rules/pydocstyle/mod.rs
---
D300 Use triple double quotes `"""`
 --> D300.py:6:5
  |
5 | def ends_in_quote():
6 |     'Sum\\mary."'
  |     ^^^^^^^^^^^^^
help: Convert to triple double quotes

D300 [*] Use triple double quotes `"""`
  --> D300.py:10:5
   |
 9 | def contains_quote():
10 |     'Sum"\\mary.'
   |     ^^^^^^^^^^^^^
help: Convert to triple double quotes
   |
10 -     'Sum"\\mary.'
10 +     """Sum"\\mary."""
   |
