crates/ruff_linter/src/rules/pydocstyle/snapshots/ruff_linter__rules__pydocstyle__tests__D301_D.py.snap
---
source: crates/ruff_linter/src/rules/pydocstyle/mod.rs
---
D301 [*] Use `r"""` if any backslashes in a docstring
   --> D.py:333:5
    |
331 | @expect('D301: Use r""" if any backslashes in a docstring')
332 | def double_quotes_backslash():
333 |     """Sum\\mary."""
    |     ^^^^^^^^^^^^^^^^
help: Add `r` prefix
    |
333 |     r"""Sum\\mary."""
    |     +
note: This is an unsafe fix and may change runtime behavior
