crates/ruff_linter/src/rules/pydocstyle/snapshots/ruff_linter__rules__pydocstyle__tests__D400_D400_415.py.snap
---
source: crates/ruff_linter/src/rules/pydocstyle/mod.rs
---
D400 First line should end with a period
 --> D400_415.py:2:5
  |
1 | def f():
2 |     "Here's a line ending in a question mark?"
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
3 |     ...
  |
help: Add period

D400 First line should end with a period
 --> D400_415.py:7:5
  |
6 | def f():
7 |     """Here's a line ending in an exclamation mark!"""
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
8 |     ...
  |
help: Add period

D400 First line should end with a period
  --> D400_415.py:11:5
   |
10 | def f():
11 |     """Here's a line ending in a colon:"""
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
12 |     ...
   |
help: Add period

D400 First line should end with a period
  --> D400_415.py:15:5
   |
14 | def f():
15 |     """Here's a line ending in a semi colon;"""
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
16 |     ...
   |
help: Add period

D400 [*] First line should end with a period
  --> D400_415.py:19:5
   |
18 | def f():
19 |     """Here's a line ending with a whitespace  """
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
20 |     ...
   |
help: Add period
   |
19 |     """Here's a line ending with a whitespace.  """
   |                                              +
note: This is an unsafe fix and may change runtime behavior
