crates/ruff_linter/src/rules/pydocstyle/snapshots/ruff_linter__rules__pydocstyle__tests__D402_D.py.snap
---
source: crates/ruff_linter/src/rules/pydocstyle/mod.rs
---
D402 First line should not be the function's signature
   --> D.py:378:5
    |
378 |     """Signature: foobar()."""
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
