crates/ruff_linter/src/rules/pydocstyle/snapshots/ruff_linter__rules__pydocstyle__tests__D402_D402.py.snap
---
source: crates/ruff_linter/src/rules/pydocstyle/mod.rs
---
D402 First line should not be the function's signature
 --> D402.py:2:5
  |
2 |     """Returns foo()."""
  |     ^^^^^^^^^^^^^^^^^^^^
  |

D402 First line should not be the function's signature
 --> D402.py:8:5
  |
8 |     """"Use this function; foo()."""
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
