crates/ruff_linter/src/rules/pydocstyle/snapshots/ruff_linter__rules__pydocstyle__tests__D404_D.py.snap
---
source: crates/ruff_linter/src/rules/pydocstyle/mod.rs
---
D404 First word of the docstring should not be "This"
   --> D.py:631:5
    |
631 |     """This is a docstring."""
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
    |

D404 First word of the docstring should not be "This"
   --> D.py:636:5
    |
636 |     """ This is a docstring that starts with a space."""  # noqa: D210
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |

D404 First word of the docstring should not be "This"
   --> D.py:639:17
    |
639 | class SameLine: """This is a docstring on the same line"""
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |

D404 First word of the docstring should not be "This"
   --> D.py:641:18
    |
641 | def same_line(): """This is a docstring on the same line"""
    |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
